# smak-vllm

./: .gitignore  PERFORMANCE.md  README.md  example.py  mermaid_diagrams.md  modal_example.py  modal_test_image.py  nano_vllm_execution_flow.md  pyproject.toml  scheduler_bench.py
logs/: sweep_20260712_031259.json
nanovllm/: config.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/utils/: debug_log.py
scripts/: bench_dashboard.py  visualize_logs.py
test/: batch_bench.py  batch_example.py  live_bench.py  online_bench.py  sweep_bench.py
test/bench/: modal_test_image.py  offline_bench.py  offline_example.py  online_bench.py  sweep_bench.py
test/unit/: conftest.py  test_block_manager.py  test_chunked_prefill.py
